[package]
name = "bevy_obj"
version = "0.7.0"
authors = ["Csányi István <csanyistvan02@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A Wavefront .obj mesh asset loader plugin"
repository = "https://github.com/AmionSky/bevy_obj"
readme = "README.md"

[dependencies]
bevy_app = { version = "0.8.0-dev", path = "../bevy/crates/bevy_app" }
bevy_asset = { version = "0.8.0-dev", path = "../bevy/crates/bevy_asset" }
bevy_render = { version = "0.8.0-dev", path = "../bevy/crates/bevy_render" }
bevy_utils = { version = "0.8.0-dev", path = "../bevy/crates/bevy_utils" }

anyhow = "1.0"
thiserror = "1.0"

obj-rs = { version = "0.7", default-features = false }

[dev-dependencies]
bevy = { version = "0.8.0-dev", path = "../bevy" }

[[example]]
name = "render_obj"
path = "example/render_obj.rs"
